--- a/hello.html
+++ b/hello.html
@@ -1,3 +1,9 @@
-<div>
-
-</div>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Hello</title>
+	</head>
+	<body>
+		Hello World
+	</body>
+</html>
